--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "rtconner/laravel-tagging": "^4.1",
+        "spatie/laravel-medialibrary": "^10.13",
         "willvincent/laravel-rateable": "^3.2"
     },
     "require-dev": {
